<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/settings"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@drawable/shadow"
            android:elevation="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_notification_options"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:letterSpacing="0"
            android:padding="20dp"
            android:text="@string/notification_options"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:iconPadding="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_app_info"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:letterSpacing="0"
            android:padding="20dp"
            android:text="@string/app_info"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:iconPadding="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_notification_options" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>